rapihin folder & tambah kodingan algoritma eclat

--- a/style/style.css
+++ b/style/style.css
@@ -23,3 +23,10 @@ div.css-1r6slb0{
     text-align: center;
 }
 
+/* div.css-17fow7x{
+    background-color: white;
+}
+
+div.css-14xya8e{
+    background-color: white;
+} */
