--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,3 @@
-/* div.css-fg4pbf{
-    position: absolute;
-    background: #F1F5FB;
-    color: rgb(49, 51, 63);
-    inset: 0px;
-    overflow: hidden;
-}
-
-.css-po3vlj {
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    padding: 1rem;
-    background-color: rgb(255, 255, 255);
-    border-radius: 0.25rem;
-    color: rgb(49, 51, 63);
-} */
-
 div.css-1r6slb0{
     background-color: white;
     padding: 3% 3% 3%;
@@ -23,14 +5,5 @@ div.css-1r6slb0{
     text-align: center;
 }
 
-/* div.css-17fow7x{
-    background-color: white;
-}
-
-div.css-14xya8e{
-    background-color: white;
-} */
-
-th{
-    background-color: #f2f2f2;
-}
+/* tbody th {display:none}
+.blank {display:none} */
