clean code, add minor tweaks, error handling

--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,12 @@ div.css-1r6slb0{
 
 /* tbody th {display:none}
 .blank {display:none} */
+
+/* hide top navbar and footer */
+#MainMenu {
+    visibility: hidden;
+}
+
+footer {
+    visibility: hidden;
+}
